--- a/landing_page.html
+++ b/landing_page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,127 +6,21 @@
   <meta name="description" content="ClinOmics AI Pro - AI-powered platform for gene mutation analysis, drug discovery, and clinical trial insights.">
   <title>ClinOmics AI Pro</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: linear-gradient(90deg, #3b82f6, #06b6d4);
-      padding: 2rem;
-      text-align: center;
-      color: #fff;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-    .btn {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background-color: #fff;
-      color: #3b82f6;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 1rem;
-      transition: background 0.3s, color 0.3s;
-    }
-    .btn:hover {
-      background-color: #3b82f6;
-      color: #fff;
-    }
-    section {
-      padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    section h2 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #222;
-    }
-    .features, .pricing {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1rem;
-    }
-    .card {
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .card h3 {
-      margin-top: 0;
-      font-size: 1.5rem;
-      color: #3b82f6;
-    }
-    .card p {
-      font-size: 0.95rem;
-      line-height: 1.4;
-      margin-top: 0.5rem;
-    }
-    .pricing .card {
-      border: 2px solid #3b82f6;
-    }
-    .payments {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
-      margin-top: 2rem;
-    }
-    footer {
-      background-color: #222;
-      color: #bbb;
-      text-align: center;
-      padding: 1rem 0;
-      font-size: 0.9rem;
-    }
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 0.75rem;
-      margin-top: 1rem;
-    }
-    .contact-form input, .contact-form textarea {
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
-      width: 100%;
-    }
-    .contact-form button {
-      background-color: #3b82f6;
-      color: #fff;
-      border: none;
-      padding: 0.75rem;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    .contact-form button:hover {
-      background-color: #2563eb;
-    }
-  </style>
+  <link rel="stylesheet" href="landing_page_assets/style.css">
 </head>
 <body>
 
+  <!-- HERO SECTION -->
   <header>
-    <h1>ClinOmics AI Pro</h1>
-    <p>AI-powered gene mutation analysis, drug discovery, and clinical trial insights.</p>
-    <a href="https://clinomics-ai-7pwnmg46tw2sqeezvajcxz.streamlit.app/" class="btn">Launch App</a>
+    <div class="overlay">
+      <img src="landing_page_assets/logo.png" alt="ClinOmics AI Pro Logo" class="logo">
+      <h1>ClinOmics AI Pro</h1>
+      <p>AI-powered gene mutation analysis, drug discovery, and clinical trial insights.</p>
+      <a href="https://clinomics-ai-7pwnmg46tw2sqeezvajcxz.streamlit.app/" class="btn">Launch App</a>
+    </div>
   </header>
 
+  <!-- FEATURES SECTION -->
   <section>
     <h2>✨ Features</h2>
     <div class="features">
@@ -136,55 +30,57 @@
       </div>
       <div class="card">
         <h3>Drug Matching</h3>
-        <p>Discover drug interactions from DGIdb and similar sources.</p>
+        <p>Discover drug interactions from DGIdb and other clinical databases.</p>
       </div>
       <div class="card">
         <h3>Clinical Trials</h3>
-        <p>Find up-to-date clinical trials matching your gene of interest.</p>
+        <p>Find real-time clinical trials for targeted therapies.</p>
       </div>
       <div class="card">
         <h3>PDF Reports</h3>
-        <p>Download professional reports for research or clinical use.</p>
+        <p>Generate professional reports for research or clinical use.</p>
       </div>
     </div>
   </section>
 
+  <!-- PRICING SECTION -->
   <section>
     <h2>💳 Pricing</h2>
     <div class="pricing">
       <div class="card">
         <h3>Free</h3>
-        <p>5 gene searches/day<br>Basic PDF reports<br>Price: <strong>$0/month</strong></p>
+        <p>5 gene searches/day<br>Basic PDF reports<br><strong>$0/month</strong></p>
       </div>
       <div class="card">
         <h3>Pro</h3>
-        <p>Unlimited searches<br>Batch uploads<br>Price: <strong>$49/month</strong></p>
+        <p>Unlimited searches<br>Batch uploads<br><strong>$49/month</strong></p>
       </div>
       <div class="card">
         <h3>Enterprise</h3>
-        <p>Bulk API access<br>Custom solutions<br>Price: <strong>$499+/month</strong></p>
+        <p>Bulk API access<br>Custom solutions<br><strong>$499+/month</strong></p>
       </div>
     </div>
   </section>
 
+  <!-- PAYMENT OPTIONS -->
   <section>
     <h2>💰 Payment Options</h2>
     <div class="payments">
       <div class="card">
         <h3>For Pakistan Users</h3>
         <p>Pay via <strong>EasyPaisa</strong> or <strong>JazzCash</strong>.<br>
-        Account Number: <strong>03XX-XXXXXXX</strong><br>
-        After payment, send a screenshot to <strong>bc190408541@vu.edu.pk</strong> for activation.</p>
+        Account: <strong>03XX-XXXXXXX</strong><br>
+        Email: <strong>bc190408541@vu.edu.pk</strong></p>
       </div>
       <div class="card">
         <h3>International Users</h3>
-        <p>Pay via <strong>Payoneer</strong> or <strong>Bank Transfer</strong>.<br>
-        Payoneer Email: <strong>your-payoneer@example.com</strong><br>
-        Contact us for invoice & setup.</p>
+        <p>Pay via <strong>Payoneer</strong>.<br>
+        Email: <strong>your-payoneer@example.com</strong></p>
       </div>
     </div>
   </section>
 
+  <!-- CONTACT FORM -->
   <section>
     <h2>📧 Contact Us</h2>
     <form class="contact-form">
